--- a/package.json
+++ b/package.json
@@ -1,34 +1,26 @@
 {
-  "name": "react-example",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "quickchat",
+  "version": "1.0.0",
+  "description": "Real-time file sharing and collaborative chat rooms without registration",
+  "main": "server.ts",
   "scripts": {
-    "dev": "tsx server.ts",
-    "build": "vite build",
+    "dev": "vite",
+    "build": "tsc && vite build",
     "preview": "vite preview",
-    "clean": "rm -rf dist",
-    "lint": "tsc --noEmit",
-    "start": "node server.ts"
+    "start": "node dist/server.js"
   },
   "dependencies": {
-    "@google/genai": "^1.29.0",
-    "@tailwindcss/vite": "^4.1.14",
-    "@vitejs/plugin-react": "^5.0.4",
-    "dotenv": "^17.2.3",
-    "lucide-react": "^0.546.0",
-    "motion": "^12.23.24",
-    "nanoid": "^5.1.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "socket.io-client": "^4.8.3",
-    "vite": "^6.2.0"
+    "express": "^4.18.2",
+    "socket.io": "^4.7.2",
+    "vite": "^4.4.0",
+    "multer": "^1.4.5-lts.1",
+    "nanoid": "^4.0.2",
+    "better-sqlite3": "^8.7.0",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "autoprefixer": "^10.4.21",
-    "tailwindcss": "^4.1.14",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/node": "^20.8.0",
+    "@types/express": "^4.17.17",
+    "typescript": "^5.2.2"
   }
 }
